fixing issus in the install .sh

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,14 @@
-com:
-	g++ script/*.cpp main.cpp -Iinclude -ludev $(shell pkg-config --cflags --libs sdl2 SDL2_image SDL2_mixer) -o ../bin/usb_moaner
+BIN_DIR = ../bin
+BIN = $(BIN_DIR)/usb_moaner
 
-run:
-	./../bin/usb_moaner
+all: $(BIN)
+
+$(BIN): main.cpp script/*.cpp
+	mkdir -p $(BIN_DIR)
+	g++ script/*.cpp main.cpp -Iinclude -ludev \
+		$(shell pkg-config --cflags --libs sdl2 SDL2_image SDL2_mixer) \
+		-o $(BIN)
+
+run: $(BIN)
+	$(BIN)
+
